src/objects/ints__Credit_Report_Liability_PAR__c.object
<CustomObject>
    <fields>
        <fullName>ints__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditReportLiability__c</fullName>
        <label>Credit Report Liability</label>
        <referenceTo>ints__Credit_Report_Liability__c</referenceTo>
        <relationshipLabel>CreditReportLiabilityPAR</relationshipLabel>
        <relationshipName>CreditReportLiabilityPAR</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Date__c</fullName>
        <label>Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Report Liability PAR</label>
    <nameField>
        <displayFormat>CRLPAR-{0000000000}</displayFormat>
        <label>Credit Report Liability PAR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Report Liability PAR</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>